# api

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
src/: dns.rs  errors.rs  main.rs  util.rs
src/endpoints/: boxart.rs  download.rs  index.rs  mod.rs
